fix whitespace

--- a/style.css
+++ b/style.css
@@ -276,7 +276,7 @@ body {
 
 .step-indicator--two {
     position: relative;
-    top: 1.8rem;
+    /* top: 1.8rem; */
     z-index: 2;
 }
 
@@ -525,6 +525,7 @@ body {
         min-height: var(--size-256);
     }
 
+
     .footer-cta {
         display: flex;
         flex-direction: row;
@@ -532,7 +533,6 @@ body {
         padding: var(--space-1400) var(--space-1000);
         text-align: left;
         /* max-width: var(--size-1120); */
-        margin-bottom: -1.5rem;
 
         background:
             linear-gradient(var(--cyan-600-transparent), var(--cyan-600-transparent)),
